--- a/index.html
+++ b/index.html
@@ -6,187 +6,190 @@
 <title>PMG™ EDU | All Courses</title>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 <style>
-/* ===== GLOBAL STYLING ===== */
+/* ===== GLOBAL ===== */
 body {
-    margin: 0;
-    font-family: 'Montserrat', sans-serif;
-    background-color: #0f0f1a;
-    color: #fdfcf6;
-    text-align: center;
-    padding: 20px;
-    position: relative;
+    margin:0;
+    font-family:'Montserrat',sans-serif;
+    background: linear-gradient(135deg, #0b0c10, #1f1b24);
+    color:#fdfcf6;
+    text-align:center;
+    padding:20px;
+    position:relative;
 }
 
 /* ===== HEADINGS ===== */
-h1, h2, h3 {
-    font-family: 'Playfair Display', serif;
-    color: #FFD700;
-    text-shadow: 1px 1px 6px rgba(255,215,0,0.4);
-    margin: 15px 0;
-}
-
-h1 { font-size: 3rem; letter-spacing: 1.2px; }
-h2 { font-size: 2.5rem; }
-h3 { font-size: 1.5rem; }
+h1,h2,h3 { font-family:'Playfair Display', serif; margin:15px 0; text-shadow:1px 1px 6px rgba(255,255,255,0.1);}
+h1 { font-size:3rem; color:#f0a500; letter-spacing:1.2px; }
+h2 { font-size:2.5rem; color:#ffa500; }
+h3 { font-size:1.5rem; color:#ffce73; }
 
 /* ===== WATERMARK ===== */
 .watermark {
     position: fixed;
-    top: 50%;
-    left: 50%;
+    top:50%; left:50%;
     transform: translate(-50%, -50%) rotate(-45deg);
-    font-size: 9rem;
-    color: rgba(255,215,0,0.04);
-    pointer-events: none;
-    user-select: none;
-    z-index: 0;
-    font-weight: bold;
+    font-size:9rem;
+    color: rgba(255,200,0,0.03);
+    pointer-events:none;
+    user-select:none;
+    z-index:0;
+    font-weight:bold;
 }
 
 /* ===== QUOTE ===== */
 .quote {
-    font-size: 1.5em;
-    margin: 15px auto 30px;
-    color: #999;
-    max-width: 800px;
-    font-style: italic;
-    font-weight: bold;
-    text-shadow: 1px 1px 2px #000;
+    font-size:1.5em;
+    margin:15px auto 30px;
+    color:#bbb;
+    max-width:800px;
+    font-style:italic;
+    font-weight:bold;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
 }
 
 /* ===== SECTIONS ===== */
 .section {
-    margin-top: 30px;
-    background: #1a1a2e;
-    padding: 30px;
-    border-radius: 20px;
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    box-shadow: 0 20px 50px rgba(0,0,0,0.5), 0 0 20px rgba(255,215,0,0.1);
-    transition: all 0.5s ease;
-    position: relative;
-    z-index: 5;
+    margin-top:30px;
+    background:#1a1a2e;
+    padding:30px;
+    border-radius:20px;
+    max-width:800px;
+    margin-left:auto;
+    margin-right:auto;
+    box-shadow:0 20px 50px rgba(0,0,0,0.5),0 0 20px rgba(255,140,0,0.1);
+    transition:all 0.5s ease;
+    position:relative;
+    z-index:5;
 }
-.section:hover { 
-    transform: translateY(-5px) scale(1.02);
-    box-shadow: 0 35px 60px rgba(0,0,0,0.7), 0 0 25px rgba(255,215,0,0.4);
-}
+.section:hover { transform: translateY(-5px) scale(1.02); box-shadow:0 35px 60px rgba(0,0,0,0.7),0 0 25px rgba(255,165,0,0.4); }
 
 /* ===== COURSES GRID ===== */
 .courses {
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(120px,1fr));
-    gap: 15px;
-    max-width: 800px;
-    margin: 20px auto;
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(120px,1fr));
+    gap:15px;
+    max-width:800px;
+    margin:20px auto;
 }
 .course {
-    background: #1b1b2e;
-    padding: 20px;
-    border-radius: 18px;
-    cursor: pointer;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.4);
-    transition: all 0.4s ease;
+    background:#1e1a29;
+    padding:20px;
+    border-radius:18px;
+    cursor:pointer;
+    box-shadow:0 10px 25px rgba(0,0,0,0.4);
+    transition:all 0.4s ease;
 }
 .course:hover {
-    transform: translateY(-5px) scale(1.03);
-    box-shadow: 0 25px 50px rgba(0,0,0,0.7), 0 0 20px rgba(255,215,0,0.3);
+    transform:translateY(-5px) scale(1.03);
+    box-shadow:0 25px 50px rgba(0,0,0,0.7),0 0 20px rgba(255,165,0,0.3);
 }
-.course h3 { color: #FFD700; text-shadow: 0 0 5px #FFD700, 0 0 15px #FFA500; }
+.course h3 { text-shadow:0 0 5px #ffbb33,0 0 15px #ff9900; }
 
 /* ===== PAPER BUTTONS ===== */
 .paper-btn {
-    width: 100%;
-    padding: 14px;
-    margin: 6px 0;
-    border: none;
-    border-radius: 18px;
-    font-weight: bold;
-    cursor: pointer;
-    background: linear-gradient(135deg, #FFD700, #FFA500);
-    color: #0f0f1a;
-    box-shadow: 0 8px 25px rgba(255,215,0,0.5), 0 0 12px rgba(255,215,0,0.3);
-    transition: all 0.5s ease;
-    text-transform: uppercase;
-    letter-spacing: 1.2px;
+    width:100%;
+    padding:14px;
+    margin:6px 0;
+    border:none;
+    border-radius:18px;
+    font-weight:bold;
+    cursor:pointer;
+    background: linear-gradient(135deg, #ff6f00, #ffa500);
+    color:#0b0c10;
+    box-shadow:0 8px 25px rgba(255,165,0,0.5),0 0 12px rgba(255,165,0,0.3);
+    transition:all 0.5s ease;
+    text-transform:uppercase;
+    letter-spacing:1.2px;
 }
-.paper-btn.clicked { background: #555; color: #ccc; }
-.paper-btn.locked { background: #555; color: #ccc; }
-.paper-btn:hover { 
-    transform: translateY(-5px) scale(1.07);
-    box-shadow: 0 18px 45px rgba(255,215,0,0.8), 0 0 35px rgba(255,165,0,0.9);
-    animation: pulse 1.5s infinite alternate;
+.paper-btn.clicked{background:#555;color:#ccc;}
+.paper-btn.locked{background:#555;color:#ccc;}
+.paper-btn:hover{
+    transform:translateY(-5px) scale(1.07);
+    box-shadow:0 18px 45px rgba(255,200,0,0.8),0 0 35px rgba(255,150,0,0.9);
+    animation:pulse 1.5s infinite alternate;
 }
-
-/* ===== BUTTON PULSE ===== */
-@keyframes pulse {
-    0% { box-shadow: 0 18px 45px rgba(255,215,0,0.8), 0 0 35px rgba(255,165,0,0.9); }
-    100% { box-shadow: 0 22px 55px rgba(255,215,0,1), 0 0 45px rgba(255,200,0,1); }
+@keyframes pulse{
+    0%{box-shadow:0 18px 45px rgba(255,200,0,0.8),0 0 35px rgba(255,150,0,0.9);}
+    100%{box-shadow:0 22px 55px rgba(255,215,0,1),0 0 45px rgba(255,180,0,1);}
 }
 
 /* ===== INPUTS ===== */
 input, textarea {
-    padding: 10px;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    margin: 5px 0;
-    width: 80%;
+    padding:10px;
+    border-radius:10px;
+    border:none;
+    outline:none;
+    margin:5px 0;
+    width:80%;
 }
-textarea { height: 80px; resize: none; }
+textarea{ height:80px; resize:none; }
 button, #ai-chat button, #dictionary button, .admin-login button {
-    background: linear-gradient(135deg, #FFD700, #FFA500);
-    color: #0f0f1a;
-    font-weight: bold;
-    border-radius: 15px;
-    padding: 12px 25px;
-    cursor: pointer;
-    transition: all 0.5s ease;
+    background: linear-gradient(135deg, #ff9900, #ffcc33);
+    color:#0b0c10;
+    font-weight:bold;
+    border-radius:15px;
+    padding:12px 25px;
+    cursor:pointer;
+    transition:all 0.5s ease;
 }
-button:hover { transform: translateY(-3px) scale(1.05); }
+button:hover{ transform:translateY(-3px) scale(1.05); }
 
 /* ===== ADMIN LOGIN ===== */
-.admin-login {
-    margin: 20px auto;
-    max-width: 400px;
-    text-align: center;
-    background: #1a1a2e;
-    padding: 20px;
-    border-radius: 20px;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+.admin-login{
+    margin:20px auto;
+    max-width:400px;
+    text-align:center;
+    background:#1a1a2e;
+    padding:20px;
+    border-radius:20px;
+    box-shadow:0 10px 30px rgba(0,0,0,0.5);
 }
 
 /* ===== DASHBOARD TABLE ===== */
-.dashboard table {
-    width: 100%;
-    border-collapse: collapse;
-    color: #fdfcf6;
-    margin-top: 10px;
+.dashboard table{width:100%;border-collapse:collapse;color:#fdfcf6;margin-top:10px;}
+.dashboard th,.dashboard td{border:1px solid #555;padding:8px;}
+.dashboard th{background:#333;}
+
+/* ===== CENTRALIZED DASHBOARD ===== */
+.central-dashboard{
+    position:fixed;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    width:90%;
+    max-width:900px;
+    background:#1b1a2e;
+    padding:30px;
+    border-radius:25px;
+    box-shadow:0 25px 60px rgba(0,0,0,0.7),0 0 35px rgba(255,140,0,0.3);
+    z-index:999;
+    display:none;
+    overflow:auto;
 }
-.dashboard th, .dashboard td {
-    border: 1px solid #555;
-    padding: 8px;
+
+/* ===== CREATOR SIGNATURE ===== */
+.creator-tag{
+    position:fixed;
+    bottom:15px;
+    right:15px;
+    font-family:'Playfair Display',serif;
+    font-weight:bold;
+    font-size:1rem;
+    color:rgba(255,200,0,0.6);
+    text-shadow:1px 1px 2px #000;
+    user-select:none;
+    pointer-events:none;
 }
-.dashboard th { background: #333; }
 
 /* ===== FOOTER ===== */
-footer {
-    background-color: #111111;
-    color: #fdfcf6;
-    padding: 60px;
-    text-align: center;
-    font-size: 1rem;
-    letter-spacing: 0.8px;
-    box-shadow: inset 0 5px 15px rgba(255,215,0,0.05);
-}
+footer{background-color:#111111;color:#fdfcf6;padding:60px;text-align:center;font-size:1rem;letter-spacing:0.8px;box-shadow:inset 0 5px 15px rgba(255,215,0,0.05);}
 
 /* ===== RESPONSIVE ===== */
-@media (max-width: 768px) {
-    h1 { font-size: 2.4rem; }
-    h2 { font-size: 2rem; }
-    .section { padding: 20px; }
-    input, textarea, button { width: 90%; margin: 5px 0; }
+@media(max-width:768px){
+    h1{font-size:2.4rem;}
+    h2{font-size:2rem;}
+    .section{padding:20px;}
+    input,textarea,button{width:90%;margin:5px 0;}
 }
 </style>
 </head>
@@ -197,6 +200,7 @@ footer {
 <h1>PMG™ EDU</h1>
 <div class="quote">“WORK HARDER, NOBODY CARES”</div>
 
+<!-- Admin login -->
 <div class="admin-login">
   <h2>Admin Login</h2>
   <input type="password" id="adminPass" placeholder="Enter password" />
@@ -252,13 +256,105 @@ footer {
   <table id="approvedTable"><tr><th>Name</th><th>Phone</th><th>Access Expiry</th></tr></table>
 </div>
 
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging-compat.js"></script>
-<script src="firebase.js"></script>
+<!-- Centralized dashboard overlay -->
+<div class="central-dashboard" id="centralDash">
+  <h2>Central Dashboard</h2>
+  <p>All users who pressed "I Paid" & sent WhatsApp screenshot</p>
+  <div id="centralList"></div>
+  <button onclick="closeCentral()">Close</button>
+</div>
+
+<div class="creator-tag">GIDECK</div>
 
 <script>
-/* === All your existing JS logic stays the same === */
+// ===== DUMMY DATA FOR AI & DICTIONARY =====
+// For now, demo data. You can replace with JSON files of 20k+ terms per course.
+let dictionary = {
+  "vector":"A quantity with both magnitude and direction.",
+  "scalar":"A quantity with magnitude only.",
+  "derivative":"Rate of change of a function.",
+  "integration":"Process of finding area under a curve."
+};
+let aiData = {...dictionary}; // expand in JSON for full courses
+
+// ===== COURSES & PAPERS =====
+const years=[2018,2019,2020,2021,2022,2023,2024];
+const demoYears=[2020,2021,2022,2023];
+
+function loadCourse(course){
+  let html=`<h2>${course} Past Papers</h2>`;
+  years.forEach(y=>{
+    if(demoYears.includes(y)){
+      html+=`<button class="paper-btn" onclick="openPaper(this,'${course}',${y})">${course} – ${y} (DEMO)</button>`;
+    }else{
+      html+=`<button class="paper-btn locked" onclick="locked()">${course} – ${y} 🔒</button>`;
+    }
+  });
+  document.getElementById("papers").innerHTML=html;
+}
+
+function openPaper(btn,course,year){
+  btn.classList.add("clicked");
+  document.getElementById("viewer-title").innerText=`${course} – ${year} Past Paper`;
+  document.getElementById("pdfFrame").src=`past-papers/${course}/${course}-${year}.pdf#toolbar=0&navpanes=0&scrollbar=0`;
+  document.getElementById("viewer").style.display="block";
+  document.getElementById("viewer").scrollIntoView({behavior:"smooth"});
+}
+
+function locked(){alert("🔒 Locked. Pay K25 and WhatsApp admin to activate.");}
+
+// ===== DICTIONARY & AI =====
+function lookup(){
+  const w=document.getElementById("wordInput").value.toLowerCase().trim();
+  document.getElementById("definition").innerText=dictionary[w]||"❌ Term not found.";
+}
+
+function askAI(){
+  const q=document.getElementById("aiInput").value.toLowerCase();
+  let response="🤖 Try asking about a known term with 'explain' or 'example'.";
+  for(let term in aiData){
+    if(q.includes(term)){
+      response=`💡 ${term.toUpperCase()}\n${aiData[term]}\n\n📘 Study Tip: Practice this concept using past papers daily.`;
+      if(q.includes("example")){
+        response+=`\n📌 Example: Apply ${term} step by step in a real problem.`;
+      }
+      break;
+    }
+  }
+  document.getElementById("ai-response").innerText=response;
+}
+
+// ===== PAYMENT SUBMISSION =====
+let pendingUsers = [];
+function submitPayment(){
+  const name=document.getElementById("userName").value.trim();
+  const phone=document.getElementById("userPhone").value.trim();
+  if(!name||!phone){alert("Enter name and phone"); return;}
+  const time = new Date().toLocaleString();
+  pendingUsers.push({name,phone,time});
+  alert("✅ Payment request submitted. Confirm screenshot via WhatsApp.");
+  updateCentral();
+}
+
+// ===== CENTRAL DASHBOARD =====
+function updateCentral(){
+  const container = document.getElementById("centralList");
+  container.innerHTML = pendingUsers.map(u=>`<div>${u.name} | ${u.phone} | ${u.time}</div>`).join('');
+  document.getElementById("centralDash").style.display = "block";
+}
+function closeCentral(){ document.getElementById("centralDash").style.display="none"; }
+
+// ===== ADMIN DASHBOARD =====
+function unlockDashboard(){
+  const pass=document.getElementById("adminPass").value;
+  if(pass!=='Pmg76243406.,SILENCE'){alert("Wrong password"); return;}
+  document.getElementById("dashContent").style.display='block';
+  document.querySelector(".admin-login").style.display='none';
+}
+
+// Prevent right-click
+document.addEventListener("contextmenu", e => e.preventDefault());
 </script>
 
 </body>
-                                                      </html>
+    </html>
